Reconfigured team site with Sinatra

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -60,7 +60,7 @@ ul {
 #robert {
   background-image: url(https://avatars.slack-edge.com/2017-01-03/123686648054_4a6a1f3ba25b58bfe8a0_72.jpg);
 }
-#james_s {
+#james {
   background-image: url(https://ca.slack-edge.com/T03JJLPSP-U3D8VHD47-4292f61e0c1e-512);
 }
 #nick {
@@ -93,7 +93,9 @@ ul {
 #joel {
   background-image: url(https://ca.slack-edge.com/T03JJLPSP-U3KHZ6GH5-2bb0068bcc3d-1024);
 } 
-#james_w {
-  background-image: url(https://ca.slack-edge.com/T03JJLPSP-U3MEEQFCP-g67232efad9b-512);
+#hak {
+  background-image: url(https://ca.slack-edge.com/T03JJLPSP-U3L2Z36TA-aa8fa8c3944d-512);
 }
-
+#ber {
+  background-image: url(https://ca.slack-edge.com/T03JJLPSP-U3HF7N9HT-6d319e48abd6-512);
+}
