--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,15 @@
   <link rel="stylesheet" href="css/default.css" />
 </head>
 <body>
+  <header>
+    <nav><img src="img/wdi_logo.png" />
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/contact">Contact&nbsp;Us</a></li>
+    </ul>
+    </nav>
+  </header>
+
   <%= yield %>
   <h2>Check out our class</h2>
   <nav>
